object-fit no longer being applied to landing page images
created a host of new cropped16:9 image sizes;
using the new croppsed images sizes on the landing page.

--- a/web/app/themes/ppj/src/sass/landing-page.sass
+++ b/web/app/themes/ppj/src/sass/landing-page.sass
@@ -180,7 +180,6 @@ $color-tertiary: $color-dark
 
     &-image
       height: 100%
-      object-fit: cover
       width: 100%
 
   &__card-title
